--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
+
 # dependencies
 /node_modules
 
@@ -10,6 +11,7 @@
 /build
 
 # misc
+*.zip
 .DS_Store
 .env.local
 .env.development.local
