--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-addons-transition-group": "^16.0.0-alpha.3",
     "react-dom": "^16.1.1",
     "react-motion": "^0.5.2",
+    "react-player": "^1.6.4",
     "react-router-dom": "^4.2.2",
     "react-router-transition": "^1.2.1",
     "react-swipeable-views": "^0.12.13",
