--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^1.2.2",
     "bodymovin": "^4.13.0",
-    "material-ui": "^0.20.0",
-    "react": "^16.2.0",
+    "react": "^16.4.1",
     "react-addons-css-transition-group": "^16.0.0-alpha.3",
     "react-addons-transition-group": "^16.0.0-alpha.3",
-    "react-dom": "^16.1.1",
+    "react-dom": "^16.4.1",
     "react-motion": "^0.5.2",
     "react-player": "^1.6.4",
-    "react-router-dom": "^4.2.2",
+    "react-router-dom": "^4.3.1",
     "react-router-transition": "^1.2.1",
-    "react-swipeable-views": "^0.12.13",
-    "react-transition-group": "^2.2.1",
+    "react-swipeable-views": "^0.12.14",
+    "react-transition-group": "^2.3.1",
     "react-unity-webgl": "^6.5.0"
   },
   "scripts": {
@@ -24,10 +24,10 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "eslint": "^4.13.1",
+    "eslint": "^4.19.1",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "react-edit-inline": "^1.0.8",
     "react-scripts": "1.0.17",
-    "webpack": "^3.10.0"
+    "webpack": "^3.12.0"
   }
 }
