--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,10 @@ typings/
 
 # Yarn Integrity file
 .yarn-integrity
+
+/*.css
+*.css
+**/**/*.css
+**/**/**/*.css
+**/**/**/**/*.css
+**/**/**/**/**/*.css
